# ant

./: .gitignore  LICENSE  README.md  pyproject.toml  sync
ant/: __init__.py  main.py
nb/: 2021-01-08 does pi(P_n) approx n? [SAQ 4.8].ipynb  2021-01-08 log^2x [SAQ 4.9].ipynb  2022-01-10 Binomial coefficients.ipynb  2022-01-12 modulo arithmetic.ipynb  2022-01-17 modulo arithmetic.ipynb  2022-01-22 logs, Chebyshev's theta function.ipynb  2022-01-23 Modulo stuff for TMA.ipynb  2022-01-28 cov eulers sum.ipynb  2022-01-28 prime powers that divide factorials.ipynb  2022-01-30 logs, Chebyshev's theta function.ipynb  2022-02-08 modulo arithmetic.ipynb  2022-03-06 Dirichlet chars tma & prime progressions.ipynb  2022-03-06 Dirichlet chars tma.ipynb  2022-03-11 sums of congruent primes.ipynb  2022-03-13 cov plots.ipynb  2022-03-19 cov Euler's summation.ipynb  [Make a copy] Template.ipynb
