[tool.poetry]
name = "ant"
version = "0.1.0"
description = ""
authors = ["vvveracruz <me@vgg.cz>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.5"
ipykernel = "^6.6.1"
jupyter = "^1.0.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
